--- a/students/tiselko_iryna/class_works/15_forms/src/_form-control.html
+++ b/students/tiselko_iryna/class_works/15_forms/src/_form-control.html
@@ -2,7 +2,7 @@
     <label for="" class="form-control__label">
         First Name
     </label>
-    <div class="form-control__group">
+    <div class="form-control__group form-control__group_right">
         <input placeholder="First Name" class="form-control__input form-input" type="text" name="first_name" required>
         <div class="form-control__icon icon">
             <svg class="icon__img">
