--- a/students/tiselko_iryna/class_works/15_forms/src/index.html
+++ b/students/tiselko_iryna/class_works/15_forms/src/index.html
@@ -29,18 +29,18 @@
                 <div class="col-6">
                     @@include('./_form-control.html')
                 </div>
+
                 <div class="col-12">
-                    <h3 class="sub__title">Social Networks</h3>
+                    <h3 class="sub-title">Social Networks</h3>
                 </div>
+
                 <div class="col-12">
                     <div class="row">
                         <div class="col-6"></div>
                         <div class="col-6"></div>
                     </div>
                 </div>
-                <div class="col-12">
 
-                </div>
                 <div class="col-12">
                     <div class="row">
                         <div class="col-4"></div>
