--- a/students/motkaliuk_andrii/17_grid/src/_ap-grid-item.html
+++ b/students/motkaliuk_andrii/17_grid/src/_ap-grid-item.html
@@ -2,4 +2,6 @@
     <img class="item__img" src="@@image-src" alt="@@alt">
     <p class="item__author">@@author</p>
     <p class="item__date">@@date</p>
+    <img class="item__button-like" src="images/like.svg" alt="like">
+    <img class="item__button-download" src="images/download.svg" alt="download">
 </div>
