--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -85,38 +85,36 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <div class="footer">
-                <div class="footer_logo">
-                    <img src="./images/logo.svg" alt="logo">
-                </div>
-                <div class="quick-links_block">
-                    <h3 class="footer_headers">Quick Links</h3>
-                    <ul>
-                        <li><a class="quick-links_item" href="#">About Us</a></li>
-                        <li><a class="quick-links_item" href="#">Blog</a></li>
-                        <li><a class="quick-links_item" href="#">Contacts</a></li>
-                        <li><a class="quick-links_item" href="#">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="legal-stuff_block">
-                    <h3 class="footer_headers">Legal Stuff</h3>
-                    <ul>
-                        <li><a class="legal-stuff_item" href="#">Disclaimer</a></li>
-                        <li><a class="legal-stuff_item" href="#">Financing</a></li>
-                        <li><a class="legal-stuff_item" href="#">Privacy Policy</a></li>
-                        <li><a class="legal-stuff_item" href="#">Terms of Service</a></li>
-                    </ul>
-                </div>
-                <div class="input_place">
-                    <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
-                    <form action="" method="post">
-                        <input class="input_space" type="text" id="phone-number" name="phone-number"
-                            placeholder="Enter your phone Number"><br>
-                        <input type="submit" value="Sign up Now">
-                    </form>
-                </div>
+            <div class="footer_logo">
+                <img src="./images/logo.svg" alt="logo">
+            </div>
+            <div class="quick-links_block">
+                <h3 class="footer_headers">Quick Links</h3>
+                <ul>
+                    <li><a class="quick-links_item" href="#">About Us</a></li>
+                    <li><a class="quick-links_item" href="#">Blog</a></li>
+                    <li><a class="quick-links_item" href="#">Contacts</a></li>
+                    <li><a class="quick-links_item" href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="legal-stuff_block">
+                <h3 class="footer_headers">Legal Stuff</h3>
+                <ul>
+                    <li><a class="legal-stuff_item" href="#">Disclaimer</a></li>
+                    <li><a class="legal-stuff_item" href="#">Financing</a></li>
+                    <li><a class="legal-stuff_item" href="#">Privacy Policy</a></li>
+                    <li><a class="legal-stuff_item" href="#">Terms of Service</a></li>
+                </ul>
+            </div>
+            <div class="input_place">
+                <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
+                <form action="" method="post">
+                    <input class="input_space" type="text" id="phone-number" name="phone-number"
+                        placeholder="Enter your phone Number"><br>
+                    <input type="submit" value="Sign up Now">
+                </form>
             </div>
         </div>
     </footer>
