--- a/students/umienchuk_oksana/10_box_model/productly/index.html
+++ b/students/umienchuk_oksana/10_box_model/productly/index.html
@@ -65,7 +65,8 @@
                 <div class="footer__form">
                     <h4 class="footer__title">Knowing you're always on the best energy deal.</h4>
                     <form>
-                        <input type="tel" id="phone" name="phone" placeholder="Enter your phone Number"><br><br>
+                        <input type="tel" id="phone" name="phone" value=""
+                            placeholder="Enter your phone Number"><br><br>
                         <button class="btn-third__item" type="submit"><span>Sign up Now</span></button>
                     </form>
                 </div>
