--- a/students/motkaliuk_andrii/17_grid/src/_sl-grid-item.html
+++ b/students/motkaliuk_andrii/17_grid/src/_sl-grid-item.html
@@ -1,7 +1,11 @@
 <div class="sl-grid__item item item_blure">
     <img class="item__img" src="@@image-src" alt="@@alt">
-    <p class="item__author">@@author</p>
-    <p class="item__date">@@date</p>
-    <img class="item__button-like" src="images/like.svg" alt="like">
-    <img class="item__button-download" src="images/download.svg" alt="download">
+    <p>
+        <a href="#"><img class="item__button-like" src="images/like.svg" alt="like"></a>
+        <a href="#"><img class="item__button-download" src="images/download.svg" alt="download"></a>
+    </p>
+    <p>
+        <span class="item__author">@@author</span>
+        <span class="item__date">@@date</span>
+    </p>
 </div>
