deleted div and #selectors in css

--- a/students/dunaieva_alona/10_box_model/denis_novik/index.html
+++ b/students/dunaieva_alona/10_box_model/denis_novik/index.html
@@ -34,17 +34,14 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="hero-block">
             <div class="container">
-                <div class="hero-block">
                     <h1 class="hero-block__title">Denis Novik</h1>
                     <img class="hero-block__image" src="images/man.jpg" alt="man">
                 </div>
-            </div>
         </section>
-        <section id="about-me">
+        <section id="about-me" class="about-me">
             <div class="container">
-                <div class="about-me">
                     <h2 class="about-me__title">About me</h2>
                     <div class="about-me__text">
                         <p>Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
@@ -52,11 +49,9 @@
                         <p>Ready to implement excellent projects with wonderful people.</p>
                     </div>
                 </div>
-            </div>
         </section>
-        <section id="skills">
+        <section id="skills" class="skills">
             <div class="container">
-                <div class="skills">
                     <h2 class="skills__title">Skills</h2>
                     <p class="skills__text">I work in such programs as</p>
                     <div class="skill">
@@ -111,13 +106,10 @@
                             <img src="images/star_white.svg" alt="star_white" class="rate__image">
                         </div>
                     </div>
-
                 </div>
-            </div>
         </section>
-        <section id="portfolio">
+        <section id="portfolio" class="portfolio">
             <div class="container">
-                <div class="portfolio">
                     <h2 class="portfolio__title">Portfolio</h2>
                     <div class="portfolio__item">
                         <a class="portfolio__item-link" href="https://www.google.com.ua/?hl=ru" target="_blank">
@@ -138,8 +130,6 @@
                         <p><a href="#">Braun Landing Page - Concept</a></p>
                     </div>
                 </div>
-
-            </div>
         </section>
     </main>
     <footer class="footer">
