--- a/students/tiselko_iryna/09_selectors/index.html
+++ b/students/tiselko_iryna/09_selectors/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https: //fonts.googleapis.com/css2? family= Open+Sans:wght@300;400;700 & display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Denis Novik </title>
 </head>
+
 <body>
     <header>
         <nav class="menu">
@@ -22,103 +24,121 @@
 
     <main>
         <section id="home">
-            <h1>Denis Novik</h1>
-            <img src="./images/main/main.jpg" alt="Denis Novik" width="943px" height="387px">
+            <div class="container">
+                <h1>Denis Novik</h1>
+                <img src="./images/main/main.jpg" alt="Denis Novik" width="943px" height="387px">
+            </div>
         </section>
 
         <section id="about">
-            <h2>About me</h2>
-            <div>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</p>
-                <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
-                <p>Ready to implement excellent projects with wonderful people.</p>
+            <div class="container">
+                <h2>About me</h2>
+                <div>
+                    <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected
+                        with
+                        it.</p>
+                    <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
+                    <p>Ready to implement excellent projects with wonderful people.</p>
+                </div>
             </div>
         </section>
 
         <section id="skills">
-            <h2>Skills</h2>
-            <p>I work in such programs as</p>
-            <div class="skills__container">
-                <div>
-                    <figure class="skills__level">
-                        <img src="./images/skills/ps.svg" alt="PS" width="89px" height="88px">
-                        <figcaption>Adobe<br>Photoshop</figcaption>
-                    </figure>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
-                </div>
+            <div class="container">
+                <h2>Skills</h2>
+                <p>I work in such programs as</p>
+                <div class="skills__container">
+                    <div>
+                        <figure class="skills__level">
+                            <img src="./images/skills/ps.svg" alt="PS" width="89px" height="88px">
+                            <figcaption>Adobe<br>Photoshop</figcaption>
+                        </figure>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    </div>
 
-                <div>
-                    <figure class="skills__level">
-                        <img src="./images/skills/ai.svg" alt="Ai" width="89px" height="88px">
-                        <figcaption>Adobe<br>Illustrator</figcaption>
-                    </figure>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
-                </div>
+                    <div>
+                        <figure class="skills__level">
+                            <img src="./images/skills/ai.svg" alt="Ai" width="89px" height="88px">
+                            <figcaption>Adobe<br>Illustrator</figcaption>
+                        </figure>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    </div>
 
-                <div>
-                    <figure class="skills__level">
-                        <img src="./images/skills/aae.svg" alt="AAE" width="89px" height="88px">
-                        <figcaption>Adobe<br>After Effects</figcaption>
-                    </figure>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
-                </div>
+                    <div>
+                        <figure class="skills__level">
+                            <img src="./images/skills/aae.svg" alt="AAE" width="89px" height="88px">
+                            <figcaption>Adobe<br>After Effects</figcaption>
+                        </figure>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    </div>
 
-                <div>
-                    <figure class="skills__level">
-                        <img src="./images/skills/figma.svg" alt="Figma" width="89px" height="88px">
-                        <figcaption>Figma</figcaption>
-                    </figure>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <div>
+                        <figure class="skills__level">
+                            <img src="./images/skills/figma.svg" alt="Figma" width="89px" height="88px">
+                            <figcaption>Figma</figcaption>
+                        </figure>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                        <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="portfolio">
-            <h2>Portfolio</h2>
-            <figure>
-                <a href="#" target="_blank"><img src="./images/portfolio/1st_prjt.jpg" alt="Online fashion store"></a>
-                <figcaption class="portfolio_text">Online fashion store -<br>Homepage</figcaption>
-            </figure>
+            <div class="container">
+                <h2>Portfolio</h2>
+                <figure>
+                    <a href="#" target="_blank"><img src="./images/portfolio/1st_prjt.jpg"
+                            alt="Online fashion store"></a>
+                    <figcaption class="portfolio_text">Online fashion store -<br>Homepage</figcaption>
+                </figure>
 
-            <figure>
-                <a href="#" target="_blank"><img src="./images/portfolio/2nd_prjt.jpg" alt="Reebok Store"></a>
-                <figcaption class="portfolio_text">Reebok Store - Concept</figcaption>
-            </figure>
+                <figure>
+                    <a href="#" target="_blank"><img src="./images/portfolio/2nd_prjt.jpg" alt="Reebok Store"></a>
+                    <figcaption class="portfolio_text">Reebok Store - Concept</figcaption>
+                </figure>
 
-            <figure>
-                <a href="#" target="_blank"><img src="./images/portfolio/3rd_prjt.jpg" alt="Braun Landing Page"></a>
-                <figcaption class="portfolio_text">Braun Landing Page - Concept</figcaption>
-            </figure>
+                <figure>
+                    <a href="#" target="_blank"><img src="./images/portfolio/3rd_prjt.jpg" alt="Braun Landing Page"></a>
+                    <figcaption class="portfolio_text">Braun Landing Page - Concept</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
     <footer>
-        <h2>Contacts</h2>
-        <p>Want to know more or just chat?<br>You are welcome!</p>
-        <button class="contact__btn"><span class="contact__btn__name">Send message</span></button>
-        <div>
-            <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/linkedin.svg" alt="linkedin" width="40px" height="40px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/instagram.svg" alt="instagram" width="40px" height="40px"></a>
-            <a href="https://www.behance.net/" target="_blank"><img src="./images/contacts/behance.svg" alt="behance" width="40px" height="40px"></a>
-            <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/dribble.svg" alt="dribble" width="40px" height="40px"></a>
+        <div class="container">
+            <h2>Contacts</h2>
+            <p>Want to know more or just chat?<br>You are welcome!</p>
+            <button class="contact__btn"><span class="contact__btn__name">Send message</span></button>
+            <div>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/linkedin.svg"
+                        alt="linkedin" width="40px" height="40px"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/instagram.svg"
+                        alt="instagram" width="40px" height="40px"></a>
+                <a href="https://www.behance.net/" target="_blank"><img src="./images/contacts/behance.svg"
+                        alt="behance" width="40px" height="40px"></a>
+                <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/dribble.svg" alt="dribble"
+                        width="40px" height="40px"></a>
+            </div>
+            <p class="last_p">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
         </div>
-        <p class="last_p">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
+
 </html>
