--- a/students/tiselko_iryna/10_blocks/Productly/index.html
+++ b/students/tiselko_iryna/10_blocks/Productly/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Productly</title>
 </head>
 
 <body>
-    <header>
-        <div class="header__container">
+    <header class="header">
+        <div class="container">
             <div class="nav__block">
                 <div class="logo">
                     <img class="logo_img" src="./images/logo/Logo.svg" alt="logo">
@@ -22,10 +22,18 @@
             </div>
             <nav class="nav__block">
                 <ul class="menu__block">
-                    <li class="menu__item"><a href="#" class="menu__links">Product</a></li>
-                    <li class="menu__item"><a href="#" class="menu__links">Customers</a></li>
-                    <li class="menu__item"><a href="#" class="menu__links">Pricing</a></li>
-                    <li class="menu__item"><a href="#" class="menu__links">Resources</a></li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__links">Product</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__links">Customers</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__links">Pricing</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__links">Resources</a>
+                    </li>
                 </ul>
             </nav>
             <div class="nav__block">
@@ -45,10 +53,10 @@
         </div>
     </header>
 
-    <main>
-        <div class="main__container">
+    <main class="main">
+        <div class="container">
             <section>
-                <div class="hero__container">
+                <div class="hero container">
                     <div>
                         <h1></h1>
                         <p></p>
@@ -60,17 +68,17 @@
                 </div>
             </section>
             <section>
-                <div class="what__container">
+                <div class="what container">
 
                 </div>
             </section>
             <section>
-                <div class="why__container">
+                <div class="why container">
 
                 </div>
             </section>
             <section>
-                <div class="who__container">
+                <div class="who container">
 
                 </div>
             </section>
@@ -82,29 +90,29 @@
         </div>
     </main>
 
-    <footer>
-        <div class="nav__footer">
+    <footer class="footer">
+        <div class="footer__menu">
             <div class="footer__logo">
                 <div class="logo">
                     <img class="logo_img" src="./images/logo/Logo.svg" alt="logo">
                 </div>
             </div>
-            <nav class="footer__links">
+            <nav class="footer__nav">
                 <h4>Quick Links</h4>
-                <ul class="links__caption">
-                    <li class="links__item"><a href="#" class="links__url">About Us</a></li>
-                    <li class="links__item"><a href="#" class="links__url">Blog</a></li>
-                    <li class="links__item"><a href="#" class="links__url">Contact</a></li>
-                    <li class="links__item"><a href="#" class="links__url">FAQ</a></li>
+                <ul class="footer__caption">
+                    <li class="footer__item"><a href="#" class="footer__links">About Us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">Blog</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">Contact</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">FAQ</a></li>
                 </ul>
             </nav>
-            <nav class="footer__links">
+            <nav class="footer__nav">
                 <h4>Legal Stuff</h4>
-                <ul class="links__caption">
-                    <li class="links__item"><a href="#" class="links__url">Disclaimer</a></li>
-                    <li class="links__item"><a href="#" class="links__url">Financing</a></li>
-                    <li class="links__item"><a href="#" class="links__url">Privacy Policy</a></li>
-                    <li class="links__item"><a href="#" class="links__url">Terms of Service</a></li>
+                <ul class="footer__caption">
+                    <li class="footer__item"><a href="#" class="footer__links">Disclaimer</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">Financing</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">Privacy Policy</a></li>
+                    <li class="footer__item"><a href="#" class="footer__links">Terms of Service</a></li>
                 </ul>
             </nav>
             <div class="footer__input">
