--- a/students/tiselko_iryna/12_positioning/index.html
+++ b/students/tiselko_iryna/12_positioning/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="container nav">
             <div class="nav__btn">
                 <button class="btn_lang">ENG</button>
@@ -32,138 +32,128 @@
         </nav>
     </header>
 
-    <main>
-        <div class="bg">
-            <div class="container">
-                <div class="row">
-                    <aside class="sidenav">
-                        <ul class="sidenav__content">
-                            <li class="sidenav__item"><a href="#introduction" class="sidenav__links">introduction</a>
-                            </li>
-                            <li class="sidenav__item"><a href="#components" class="sidenav__links">core components</a>
-                            </li>
-                            <li class="sidenav__item"><a href="#fundamentals" class="sidenav__links">react
-                                    fundamentals</a></li>
-                            <li class="sidenav__item"><a href="#input" class="sidenav__links">handling text input</a>
-                            </li>
-                        </ul>
-                    </aside>
+    <main class="main">
+        <div class="container">
+            <div class="row">
+                <aside class="col-4 sidenav">
+                    <ul class="sidenav__content">
+                        <li class="sidenav__item"><a href="#introduction" class="sidenav__links">introduction</a>
+                        </li>
+                        <li class="sidenav__item"><a href="#components" class="sidenav__links">core components</a>
+                        </li>
+                        <li class="sidenav__item"><a href="#fundamentals" class="sidenav__links">react
+                                fundamentals</a></li>
+                        <li class="sidenav__item"><a href="#input" class="sidenav__links">handling text input</a>
+                        </li>
+                    </ul>
+                </aside>
 
-                    <div class="col-8">
-                        <section>
-                            <div class="wrapper__introduction" id="introduction">
-                                <h2 class="title__introduction">introduction<span class="title__sup">Chapter 1</span>
-                                </h2>
-                                <p class="introduction__content">
-                                    Welcome to the very start of your React Native journey! If
-                                    you're looking for environment setup instructions, they've moved to
-                                    <ins>their own section</ins>. Continue reading for an introduction to the
-                                    documentation,
-                                    Native
-                                    Components, React, and more!
-                                </p>
-                            </div>
-                        </section>
+                <div class="col-8">
+                    <section id="introduction">
+                        <h2 class="title__introduction">introduction<span class="title__sup">Chapter 1</span>
+                        </h2>
+                        <p class="introduction__content">
+                            Welcome to the very start of your React Native journey! If
+                            you're looking for environment setup instructions, they've moved to
+                            <ins>their own section</ins>. Continue reading for an introduction to the
+                            documentation,
+                            Native
+                            Components, React, and more!
+                        </p>
+                    </section>
 
-                        <section>
-                            <div class="wrapper__components" id="components">
-                                <h2 class="title__component">core components<span class="title__sup">Chapter 2</span>
-                                </h2>
-                                <p class="components__content">
-                                    React Native is an open source framework for building Android
-                                    and
-                                    iOS applications using React and the app platform’s native capabiles. With React
-                                    Native,
-                                    you
-                                    use JavaScript to access your platform’s APIs as well as to describe the appearance
-                                    and
-                                    behavior of your UI using React components: <i>bundles of reusable, nestable
-                                        code</i>. You
-                                    can learn more about React in the next section. But first, let’s cover how
-                                    components
-                                    work
-                                    in React Native.
-                                </p>
-                            </div>
-                        </section>
+                    <section id="components">
+                        <h2 class="title__component">core components<span class="title__sup">Chapter 2</span>
+                        </h2>
+                        <p class="components__content">
+                            React Native is an open source framework for building Android
+                            and
+                            iOS applications using React and the app platform’s native capabiles. With React
+                            Native,
+                            you
+                            use JavaScript to access your platform’s APIs as well as to describe the appearance
+                            and
+                            behavior of your UI using React components: <i>bundles of reusable, nestable
+                                code</i>. You
+                            can learn more about React in the next section. But first, let’s cover how
+                            components
+                            work
+                            in React Native.
+                        </p>
+                    </section>
 
-                        <section>
-                            <div class="wrapper__fundamentals" id="fundamentals">
-                                <h2 class="title__fundamentals">react fundamentals<span class="title__sup">Chapter
-                                        3</span></h2>
-                                <div class="fundamentals__content">
-                                    <p>
-                                        React Native runs on React, a popular open source library
-                                        for building user interfaces with JavaScript. To make the most of React Native,
-                                        it
-                                        helps
-                                        to understand React itself. This section can get you started or can serve as a
-                                        refresher
-                                        course.
-                                    </p>
-                                    <p>We’re going to cover the core concepts behind React:</p>
-                                    <p>
-                                        <b>+ components.</b> The rest of this introduction to React uses cats in its
-                                        examples: friendly, approachable creatures that need names and a cafe to work
-                                        in.
-                                    </p>
-                                    <p>
-                                        <b>+ JSX.</b> React and React Native use JSX, a syntax that lets you write
-                                        elements
-                                        inside JavaScript like so:
-                                    </p>
-                                    <span class="fundamentals__mark">&lt;Text&gt;Hello, I am your
-                                        cat!&lt;/Text&gt;.</span>
-                                    <p>
-                                        The React docs have <ins>a comprehensive guide to JSX</ins> you can refer to
-                                        learn
-                                        even more.
-                                        Because JSX is JavaScript, you can use variables inside it. Here you are
-                                        declaring a
-                                        <span class="fundamentals__mark">name</span> for the cat, name, and
-                                        embedding it
-                                        with curly braces inside <span
-                                            class="fundamentals__mark">&lt;Text&gt;&lt;/Text&gt;</span>
-                                    </p>
-                                    <p>
-                                        <b>+ props.</b> Props is short for “properties”.
-                                    </p>
-                                    <p>
-                                        <b>+ state.</b> While you can think of props as arguments you use to configure
-                                        how
-                                        components render, state is like a component’s personal data storage. State is
-                                        useful for handling data that changes over time or that comes from user
-                                        interaction.
-                                        State gives your components memory!
-                                    </p>
-                                </div>
-                            </div>
-                        </section>
+                    <section id="fundamentals">
+                        <h2 class="title__fundamentals">react fundamentals<span class="title__sup">Chapter
+                                3</span></h2>
+                        <div class="fundamentals__content">
+                            <p>
+                                React Native runs on React, a popular open source library
+                                for building user interfaces with JavaScript. To make the most of React Native,
+                                it
+                                helps
+                                to understand React itself. This section can get you started or can serve as a
+                                refresher
+                                course.
+                            </p>
+                            <p>We’re going to cover the core concepts behind React:</p>
+                            <p>
+                                <b>+ components.</b> The rest of this introduction to React uses cats in its
+                                examples: friendly, approachable creatures that need names and a cafe to work
+                                in.
+                            </p>
+                            <p>
+                                <b>+ JSX.</b> React and React Native use JSX, a syntax that lets you write
+                                elements
+                                inside JavaScript like so:
+                            </p>
+                            <span class="fundamentals__mark">&lt;Text&gt;Hello, I am your
+                                cat!&lt;/Text&gt;.</span>
+                            <p>
+                                The React docs have <ins>a comprehensive guide to JSX</ins> you can refer to
+                                learn
+                                even more.
+                                Because JSX is JavaScript, you can use variables inside it. Here you are
+                                declaring a
+                                <span class="fundamentals__mark">name</span> for the cat, name, and
+                                embedding it
+                                with curly braces inside <span
+                                    class="fundamentals__mark">&lt;Text&gt;&lt;/Text&gt;</span>
+                            </p>
+                            <p>
+                                <b>+ props.</b> Props is short for “properties”.
+                            </p>
+                            <p>
+                                <b>+ state.</b> While you can think of props as arguments you use to configure
+                                how
+                                components render, state is like a component’s personal data storage. State is
+                                useful for handling data that changes over time or that comes from user
+                                interaction.
+                                State gives your components memory!
+                            </p>
+                        </div>
+                    </section>
 
-                        <section>
-                            <div class="wrapper__input" id="input">
-                                <h2 class="title__input">handling text input<span class="title__sup">Chapter 4</span>
-                                </h2>
-                                <div class="input__content">
-                                    <p>
-                                        TextInput is a Core Component that allows the user to enter text. It has an
-                                        <i>onChangeText</i>
-                                        prop that takes a function to be called every time the text changed, and an
-                                        onSubmitEditing prop that takes a function to be called when the text is
-                                        submitted.
-                                    </p>
-                                    <p>
-                                        For example, let's say that as the user types, you're translating their words
-                                        into a
-                                        different language. In this new language, every single word is written the same
-                                        way:
-                                        🍕.
-                                        So the sentence "Hello there Bob" would be translated as "🍕 🍕".
-                                    </p>
-                                </div>
-                            </div>
-                        </section>
-                    </div>
+                    <section id="input">
+                        <h2 class="title__input">handling text input<span class="title__sup">Chapter 4</span>
+                        </h2>
+                        <div class="input__content">
+                            <p>
+                                TextInput is a Core Component that allows the user to enter text. It has an
+                                <i>onChangeText</i>
+                                prop that takes a function to be called every time the text changed, and an
+                                onSubmitEditing prop that takes a function to be called when the text is
+                                submitted.
+                            </p>
+                            <p>
+                                For example, let's say that as the user types, you're translating their words
+                                into a
+                                different language. In this new language, every single word is written the same
+                                way:
+                                🍕.
+                                So the sentence "Hello there Bob" would be translated as "🍕 🍕".
+                            </p>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
