--- a/students/motkaliuk_andrii/17_grid/src/_sl-grid-item.html
+++ b/students/motkaliuk_andrii/17_grid/src/_sl-grid-item.html
@@ -1,4 +1,4 @@
-<div class="sl-grid__item item item_blure">
+<div class="sl-grid__item item">
     <img class="item__img" src="@@image-src" alt="@@alt">
     <p>
         <a href="#"><img class="item__button-like" src="images/like.svg" alt="like"></a>
