--- a/students/tiselko_iryna/11_flex/index.html
+++ b/students/tiselko_iryna/11_flex/index.html
@@ -13,33 +13,29 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <div class="row">
-                <div class="nav__block">
+                <div class="col-4">
                     <div class="logo">
                         <img class="logo_img" src="./images/logo/Logo.svg" alt="logo">
                     </div>
                 </div>
-                <nav class="nav__block">
+                <nav class="col-4">
                     <ul class="menu__block">
-                        <li class="menu__item"><a href="#" class="menu__links">Product</a></li>
-                        <li class="menu__item"><a href="#" class="menu__links">Customers</a></li>
-                        <li class="menu__item"><a href="#" class="menu__links">Pricing</a></li>
-                        <li class="menu__item"><a href="#" class="menu__links">Resources</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Product</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Customers</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Pricing</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Resources</a></li>
                     </ul>
                 </nav>
-                <div class="nav__block">
+                <div class="col-4">
                     <div class="menu__btns">
                         <div class="up_btn">
-                            <button class="btn__up_btn">
-                                <span class="btn__up__text">Sign Up</span>
-                            </button>
+                            <a href="#" class="btn__up-btn">Sign Up</a>
                         </div>
                         <div class="in_btn">
-                            <button class="btn__in_btn">
-                                <span class="btn__in__text">Sign In</span>
-                            </button>
+                            <a href="#" class="btn__in-btn">Sign In</a>
                         </div>
                     </div>
                 </div>
@@ -47,120 +43,96 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <section class="hero">
-            <div class="container hero__container">
-                <div class="hero__container_content">
-                    <h1 class="content__title">The Design Thinking superpowers</h1>
-                    <p class="content__text">Tools, tutorials, design and innovation experts, all in one place!
-                        The
-                        most intuitive way to imagine your next user experience.
-                    </p>
-                    <div class="input__btn__block">
-                        <button class="input__btn">
-                            <span class="input__btn_text">Get started</span>
-                        </button>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h1 class="content__title">The Design Thinking superpowers</h1>
+                        <p class="content__text">Tools, tutorials, design and innovation experts, all in one place!
+                            The
+                            most intuitive way to imagine your next user experience.
+                        </p>
+                        <div class="content__btn">
+                            <a href="#" class="btn__btn">Get started</a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="image__wrapper">
+                            <img class="hero__container-img" src="images/hero/hero_img.svg" alt="design_superpowers">
+                        </div>
                     </div>
                 </div>
-                <img class="hero__container-img" src="images/hero/hero_img.svg" alt="design_superpowers">
             </div>
         </section>
 
         <section class="tools">
-            <div class="tools__bg">
-                <div class="container tools__container">
-                    <h2 class="tools__title">We design tools to unveil your superpowers</h2>
-                    <div class="tools__wraper">
-                        <div class="tools__content card">
-                            <img class="card__icon" src="images/tools/klick.svg" alt="icon_klick">
-                            <h3 class="card__title">First click tests</h3>
-                            <p class="card__text">While most people enjoy casino gambling.</p>
-                        </div>
-                        <div class="tools__content card">
-                            <img class="card__icon" src="images/tools/design.svg" alt="icon_design">
-                            <h3 class="card__title">Design surveys</h3>
-                            <p class="card__text">Sports betting, lottery and bingo playing for the fun.</p>
-                        </div>
-                        <div class="tools__content card">
-                            <img class="card__icon" src="images/tools/preference.svg" alt="icon_preference">
-                            <h3 class="card__title">Preference tests</h3>
-                            <p class="card__text">The Myspace page defines the individual.</p>
-                        </div>
-                        <div class="tools__content card">
-                            <img class="card__icon" src="images/tools/tests.svg" alt="icon_klick">
-                            <h3 class="card__title">Five second tests</h3>
-                            <p class="card__text">Personal choices and the overall personality of the person.
-                            </p>
-                        </div>
+            <div class="container">
+                <h2 class="tools__title">We design tools to unveil your superpowers</h2>
+                <div class="row">
+                    <div class="col-3 tools__content card">
+                        <img class="card__icon" src="images/tools/klick.svg" alt="icon_klick">
+                        <h3 class="card__title">First click tests</h3>
+                        <p class="card__text">While most people enjoy casino gambling.</p>
                     </div>
-                    <div class="input__btn__block">
-                        <button class="input__btn">
-                            <span class="input__btn_text">Sign up Now</span>
-                        </button>
+                    <div class="col-3 tools__content card">
+                        <img class="card__icon" src="images/tools/design.svg" alt="icon_design">
+                        <h3 class="card__title">Design surveys</h3>
+                        <p class="card__text">Sports betting, lottery and bingo playing for the fun.</p>
                     </div>
+                    <div class="col-3 tools__content card">
+                        <img class="card__icon" src="images/tools/preference.svg" alt="icon_preference">
+                        <h3 class="card__title">Preference tests</h3>
+                        <p class="card__text">The Myspace page defines the individual.</p>
+                    </div>
+                    <div class="col-3 tools__content card">
+                        <img class="card__icon" src="images/tools/tests.svg" alt="icon_klick">
+                        <h3 class="card__title">Five second tests</h3>
+                        <p class="card__text">Personal choices and the overall personality of the person.
+                        </p>
+                    </div>
+                </div>
+                <div class="tools__btn">
+                    <a href="#" class="btn__btn">Sign up Now</a>
                 </div>
             </div>
         </section>
-
-        <div class="col-4">
-            <section>
-                <div class="why__container">
-
-                </div>
-            </section>
-        </div>
-        <div class="col-4">
-            <section>
-                <div class="who__container">
-
-                </div>
-            </section>
-        </div>
-        <div class="col-4">
-            <section>
-                <div class="who2__container">
-
-                </div>
-            </section>
-        </div>
     </main>
-
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="footer__logo">
+                <div class="col-3 footer__logo">
                     <div class="logo">
                         <img class="logo_img" src="./images/logo/Logo.svg" alt="logo">
                     </div>
                 </div>
-                <nav class="footer__links">
-                    <h4>Quick Links</h4>
-                    <ul class="links__caption">
-                        <li class="links__item"><a href="#" class="links__url">About Us</a></li>
-                        <li class="links__item"><a href="#" class="links__url">Blog</a></li>
-                        <li class="links__item"><a href="#" class="links__url">Contact</a></li>
-                        <li class="links__item"><a href="#" class="links__url">FAQ</a></li>
+                <nav class="col-3 footer__nav">
+                    <h4 class="footer__caption">Quick Links</h4>
+                    <ul class="footer__menu">
+                        <li class="footer__item"><a href="#" class="footer__link">About Us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Blog</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">FAQ</a></li>
                     </ul>
                 </nav>
-                <nav class="footer__links">
-                    <h4>Legal Stuff</h4>
-                    <ul class="links__caption">
-                        <li class="links__item"><a href="#" class="links__url">Disclaimer</a></li>
-                        <li class="links__item"><a href="#" class="links__url">Financing</a></li>
-                        <li class="links__item"><a href="#" class="links__url">Privacy Policy</a></li>
-                        <li class="links__item"><a href="#" class="links__url">Terms of Service</a></li>
+                <nav class="col-3 footer__nav">
+                    <h4 class="footer__caption">Legal Stuff</h4>
+                    <ul class="footer__menu">
+                        <li class="footer__item"><a href="#" class="footer__link">Disclaimer</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Financing</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms of Service</a></li>
                     </ul>
                 </nav>
-                <div class="footer__input">
-                    <h4 class="input__caption">Knowing you're always on<br>the best energy deal.</h4>
-                    <div class="input__block">
-                        <input class="input__box" type="tel" name="telnum" id="" placeholder="Enter your phone Number">
-                    </div>
-                    <div class="input__btn__block">
-                        <button class="input__btn">
-                            <span class="input__btn_text">Sign up Now</span>
-                        </button>
-                    </div>
+                <div class="col-3">
+                    <form method="post" action="#" class="footer__input">
+                        <label for="telnum" class="input__label">
+                            Knowing you're always on<br>the best energy deal.
+                            <input class="input__box" type="tel" name="telnum" id="telnum"
+                                placeholder="Enter your phone Number">
+                        </label>
+                        <button class="input__btn" type="submit">Sign up Now</button>
+                    </form>
                 </div>
             </div>
 
